fix: update configuration for proper GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>TallerAI - Height Growth Estimator</title>
+    <meta name="description" content="Track and estimate your height growth with TallerAI" />
   </head>
   <body>
     <div id="root"></div>
