fix: update configuration for proper GitHub Pages deployment with correct base URL

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/taller.ai/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TallerAI - Height Growth Estimator</title>
     <meta name="description" content="Track and estimate your height growth with TallerAI" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/taller.ai/src/main.tsx"></script>
   </body>
 </html>
